[Swagger]: add swagger all user detail
