# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   groups.Dto:
     properties:
@@ -53,18 +52,9 @@ definitions:
       userName:
         type: string
     type: object
-host: localhost:5000
 info:
-  contact:
-    email: soberkoder@swagger.io
-    name: API Support
-  description: This is a sample serice for managing orders
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: vdatchat API
-  version: "1.0"
+  contact: {}
+  license: {}
 paths:
   /api/v1/groups:
     get:
@@ -217,6 +207,36 @@ paths:
       summary: add user to group
       tags:
       - groupUser
+  /api/v1/user:
+    get:
+      consumes:
+      - application/json
+      description: find user by keyword
+      parameters:
+      - description: name search by keyword
+        in: query
+        name: keyword
+        type: string
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: pageSize
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/userdetail.Dto'
+            type: array
+      summary: find user by keyword
+      tags:
+      - user
   /api/v1/user/info:
     get:
       consumes:
@@ -230,6 +250,30 @@ paths:
           schema:
             $ref: '#/definitions/userdetail.Dto'
       summary: check user api
+      tags:
+      - user
+  /api/v1/user/online:
+    delete:
+      consumes:
+      - application/json
+      description: user logout api
+      parameters:
+      - description: hostName
+        in: query
+        name: hostName
+        type: string
+      - description: socketId
+        in: query
+        name: socketId
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+      summary: user logout
       tags:
       - user
 swagger: "2.0"
